<resources>
    <string name="app_name">rcshop</string>
    <string name="rc_my_order_expected_time">期望时间</string>
    <string name="rc_my_order_place_time">下单时间</string>
    <string name="rc_my_order_subscribe_time">确定预约时间</string>
    <string name="rc_my_order_money">实付 :</string>
    <string name="rc_my_order_refund">申请退款</string>
    <string name="rc_my_order_refund_money">退款金额 : </string>
    <string name="rc_my_order_refund_cause">退款原因</string>
    <string name="rc_my_order_refund_input_cause">请输入您的退款原因</string>
    <string name="rc_my_order_cancle_order">取消订单</string>
    <string name="rc_my_order_historical_data">历史就诊资料</string>
    <string name="rc_my_order_go_pay">去支付</string>
    <string name="rc_my_order_video">视频咨询</string>
    <string name="rc_my_order_examine_particulars">查看详情</string>
    <string name="rc_my_order_phone">电话咨询</string>
    <string name="rc_my_order_number">订单编号</string>
    <string name="rc_patient_message">患者信息</string>
    <string name="rc_open_status">开通状态</string>
    <string name="rc_order_type">类型</string>
    <string name="rc_subscribe_time">确定预约时间</string>
    <string name="rc_perfect_message">完善就诊信息</string>
    <string name="rc_shop_pay">支付</string>
    <string name="rc_no_data">您还没有订单哦 ~</string>
    <string name="rc_shop_server_time">服务时长：</string>
    <string name="rc_shop_price">价\t\t\t\t格：</string>
    <string name="rc_shop_pay_now">立即支付</string>
    <string name="rc_shop_buy_now">立即购买</string>
    <string name="rc_shop_buy_give">送亲友</string>
    <string name="rc_shop_buy_self">自用，购买</string>
    <string name="rc_shop_phone_no">手机号码</string>
    <string name="rc_shop_phone_no_hint">请输入手机号</string>
    <string name="rc_shop_is_add">添加为亲友</string>
    <string name="rc_shop_nick_name">昵称</string>
    <string name="rc_shop_nick_name_hint">请输入昵称</string>
    <string name="rc_shop_true_name">真实姓名</string>
    <string name="rc_shop_true_name_hint">请输入真实姓名</string>
    <string name="rc_shop_card">身份证号码</string>
    <string name="rc_shop_card_hint">请输入身份证号码</string>
    <string name="rc_shop_pay_notes">购买须知：</string>
    <string name="rc_shop_goods_name">商品名称</string>
    <string name="rc_shop_server_period">服务期限</string>
    <string name="rc_shop_buy_server">购买服务</string>
</resources>
