<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rc_line"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/rc_white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:text="@string/rc_my_order_refund_money"
                android:textColor="@color/rc_text_color"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/rc_fragment_my_order_refund_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="14dp"
                android:textColor="#f42f2f"
                android:textSize="14dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rc_bg_order_refund_cause"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/rc_my_order_refund_cause"
                android:textColor="@color/rc_text_color"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/rc_fragment_my_order_refund_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/rc_my_order_refund_input_cause"
                android:textColor="@color/rc_text_color"
                android:textColorHint="@color/rc_text_color_none"
                android:textSize="12dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/rc_white"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/rc_white"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/rc_my_order_refund" />
            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/rc_white"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/rc_fragment_my_order_refund_click"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:background="?attr/RCDarkColor"
        android:gravity="center"
        android:text="@string/rc_my_order_refund"
        android:textColor="@color/rc_white"
        android:textSize="15dp" />
</RelativeLayout>