<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rc_f_goods_choose_user_bottom_layout"
        android:layout_alignParentTop="true"
        android:background="#f3f4f9"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="2dp">


            <com.rocedar.lib.base.view.RCGridViewForScrollView
                android:id="@+id/rc_f_goods_choose_user_gridview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/rc_white"
                android:numColumns="4"
                android:padding="5dp"
                android:visibility="gone">


            </com.rocedar.lib.base.view.RCGridViewForScrollView>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="0.67dp"
                android:background="@color/rc_white">

                <TextView
                    android:id="@+id/rc_f_goods_choose_user_phone_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="13dp"
                    android:text="@string/rc_shop_phone_no"
                    android:textColor="@color/rc_text_color"
                    android:textSize="13dp" />

                <EditText
                    android:id="@+id/rc_f_goods_choose_user_phone_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="13dp"
                    android:layout_toRightOf="@+id/rc_f_goods_choose_user_phone_text"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:hint="@string/rc_shop_phone_no_hint"
                    android:inputType="phone"
                    android:maxLength="20"
                    android:textColor="@color/rc_text_color_light"
                    android:textColorHint="@color/rc_text_color_none"
                    android:textSize="12dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rc_f_goods_choose_user_isadd_layout"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="0.67dp"
                android:background="@color/rc_white"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="13dp"
                    android:text="@string/rc_shop_is_add"
                    android:textColor="@color/rc_text_color"
                    android:textSize="13dp" />


                <ImageView
                    android:id="@+id/rc_f_goods_choose_user_isadd_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="13dp"
                    android:src="@mipmap/rc_select_default" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rc_f_goods_choose_user_nickname_input_layout"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="0.67dp"
                android:background="@color/rc_white"
                android:visibility="gone">

                <TextView
                    android:id="@+id/rc_f_goods_choose_user_nickname_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="13dp"
                    android:text="@string/rc_shop_nick_name"
                    android:textColor="@color/rc_text_color"
                    android:textSize="13dp" />

                <EditText
                    android:id="@+id/rc_f_goods_choose_user_nickname_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="13dp"
                    android:layout_toRightOf="@+id/rc_f_goods_choose_user_nickname_text"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:hint="@string/rc_shop_nick_name_hint"
                    android:inputType="text"
                    android:maxLength="20"
                    android:textColor="@color/rc_text_color_light"
                    android:textColorHint="@color/rc_text_color_none"
                    android:textSize="12dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rc_f_goods_choose_user_truename_input_layout"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="0.67dp"
                android:background="@color/rc_white"
                android:visibility="gone">

                <TextView
                    android:id="@+id/rc_f_goods_choose_user_truename_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="13dp"
                    android:text="@string/rc_shop_true_name"
                    android:textColor="@color/rc_text_color"
                    android:textSize="13dp" />

                <EditText
                    android:id="@+id/rc_f_goods_choose_user_truename_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="13dp"
                    android:layout_toRightOf="@+id/rc_f_goods_choose_user_truename_text"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:hint="@string/rc_shop_true_name_hint"
                    android:inputType="text"
                    android:maxLength="20"
                    android:textColor="@color/rc_text_color_light"
                    android:textColorHint="@color/rc_text_color_none"
                    android:textSize="12dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rc_f_goods_choose_user_card_input_layout"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="0.67dp"
                android:background="@color/rc_white"
                android:visibility="gone">

                <TextView
                    android:id="@+id/rc_f_goods_choose_user_card_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="13dp"
                    android:text="@string/rc_shop_card"
                    android:textColor="@color/rc_text_color"
                    android:textSize="13dp" />

                <EditText
                    android:id="@+id/rc_f_goods_choose_user_card_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="13dp"
                    android:layout_toRightOf="@+id/rc_f_goods_choose_user_card_text"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:hint="@string/rc_shop_card_hint"
                    android:inputType="textEmailAddress"
                    android:maxLength="18"
                    android:textColor="@color/rc_text_color_light"
                    android:textColorHint="@color/rc_text_color_none"
                    android:textSize="12dp" />

            </RelativeLayout>

            <com.rocedar.lib.base.view.RCNoScrollWebView
                android:id="@+id/rc_f_goods_choose_user_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/rc_f_goods_choose_user_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/rc_white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rc_f_goods_choose_user_bottom_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:textColor="#f6a23f"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/rc_f_goods_choose_user_bottom_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="4dp"
            android:layout_toRightOf="@+id/rc_f_goods_choose_user_bottom_price"
            android:text="/"
            android:textColor="@color/rc_text_color_light"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/rc_f_goods_choose_user_bottom_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/rc_f_goods_choose_user_bottom_temp"
            android:textColor="@color/rc_text_color_light"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/rc_f_goods_choose_user_bottom_pay"
            android:layout_width="160dp"
            android:layout_height="49dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="?attr/RCDarkColor"
            android:gravity="center"
            android:text="@string/rc_shop_pay_now"
            android:textColor="@color/rc_white"
            android:textSize="14dp" />


    </RelativeLayout>

</RelativeLayout>