<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rc_f_goods_choose_user_bottom_layout"
        android:layout_alignParentTop="true"
        android:background="#f3f4f9"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="2dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="0.67dp"
                android:background="@color/rc_white">

                <TextView
                    android:id="@+id/rc_f_goods_renew_phone_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="13dp"
                    android:text="@string/rc_shop_phone_no"
                    android:textColor="@color/rc_text_color"
                    android:textSize="13dp" />

                <TextView
                    android:id="@+id/rc_f_goods_renew_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="13dp"
                    android:layout_toRightOf="@+id/rc_f_goods_renew_phone_text"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:textColor="@color/rc_text_color_light"
                    android:textSize="12dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="0.67dp"
                android:background="@color/rc_white">

                <TextView
                    android:id="@+id/rc_f_goods_renew_truename_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="13dp"
                    android:text="@string/rc_shop_true_name"
                    android:textColor="@color/rc_text_color"
                    android:textSize="13dp" />

                <TextView
                    android:id="@+id/rc_f_goods_renew_truename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="13dp"
                    android:layout_toRightOf="@+id/rc_f_goods_renew_truename_text"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:textColor="@color/rc_text_color_light"
                    android:textSize="12dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="0.67dp"
                android:background="@color/rc_white">

                <TextView
                    android:id="@+id/rc_f_goods_renew_card_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="13dp"
                    android:text="@string/rc_shop_card"
                    android:textColor="@color/rc_text_color"
                    android:textSize="13dp" />

                <TextView
                    android:id="@+id/rc_f_goods_renew_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="13dp"
                    android:layout_toRightOf="@+id/rc_f_goods_choose_user_card_text"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:textColor="@color/rc_text_color_light"
                    android:textColorHint="@color/rc_text_color_none"
                    android:textSize="12dp" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="7dp"
                android:background="@color/rc_white">

                <TextView
                    android:id="@+id/rc_f_goods_renew_goods_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="13dp"
                    android:text="@string/rc_shop_goods_name"
                    android:textColor="@color/rc_text_color"
                    android:textSize="13dp" />

                <TextView
                    android:id="@+id/rc_f_goods_renew_goods_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="13dp"
                    android:layout_toRightOf="@+id/rc_f_goods_renew_goods_name_text"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:textColor="@color/rc_text_color_light"
                    android:textSize="12dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="0.67dp"
                android:background="@color/rc_white">

                <TextView
                    android:id="@+id/rc_f_goods_renew_server_period_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="13dp"
                    android:text="@string/rc_shop_server_period"
                    android:textColor="@color/rc_text_color"
                    android:textSize="13dp" />

                <TextView
                    android:id="@+id/rc_f_goods_renew_server_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="13dp"
                    android:layout_toRightOf="@+id/rc_f_goods_renew_server_period_text"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:textColor="@color/rc_text_color_light"
                    android:textSize="12dp" />

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/rc_f_goods_renew_notes_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/rc_f_goods_renew_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/rc_white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rc_f_goods_renew_bottom_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:textColor="#f6a23f"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/rc_f_goods_renew_bottom_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="4dp"
            android:layout_toRightOf="@+id/rc_f_goods_renew_bottom_price"
            android:text="/"
            android:textColor="@color/rc_text_color_light"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/rc_f_goods_renew_bottom_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/rc_f_goods_renew_bottom_temp"
            android:textColor="@color/rc_text_color_light"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/rc_f_goods_renew_bottom_pay"
            android:layout_width="160dp"
            android:layout_height="49dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="?attr/RCDarkColor"
            android:gravity="center"
            android:text="@string/rc_shop_pay_now"
            android:textColor="@color/rc_white"
            android:textSize="14dp" />


    </RelativeLayout>

</RelativeLayout>